diesel_compile_tests/tests/ui/combinations_require_same_sql_types.stderr
error[E0271]: type mismatch resolving `<comments::table as diesel::query_builder::AsQuery>::SqlType == (diesel::sql_types::Integer, diesel::sql_types::Text)`
  --> $DIR/combinations_require_same_sql_types.rs:31:26
   |
31 |     let _ = users::table.union(comments::table);
   |                          ^^^^^ expected struct `diesel::sql_types::Integer`, found struct `diesel::sql_types::Text`
   |
   = note: expected type `(diesel::sql_types::Integer, diesel::sql_types::Integer)`
              found type `(diesel::sql_types::Integer, diesel::sql_types::Text)`

error[E0271]: type mismatch resolving `<comments::table as diesel::query_builder::AsQuery>::SqlType == (diesel::sql_types::Integer, diesel::sql_types::Text)`
  --> $DIR/combinations_require_same_sql_types.rs:36:19
   |
36 |     let _ = union.union(comments::table);
   |                   ^^^^^ expected struct `diesel::sql_types::Integer`, found struct `diesel::sql_types::Text`
   |
   = note: expected type `(diesel::sql_types::Integer, diesel::sql_types::Integer)`
              found type `(diesel::sql_types::Integer, diesel::sql_types::Text)`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0271`.

